fix part_7